--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "freeserver",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple, open source web framework for NodeJS, designed as an alternative for Apache or Microsoft's Internet Information Services.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "dependencies":{
-	  "mime-types":">= 2.1.0"
+  "dependencies": {
+    "intrusive-linked-list": "^1.0.1",
+    "mime-types": ">= 2.1.0"
   },
   "keywords": [
     "web",
